k8s/user-apps/vikunja/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vikunja
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
spec:
  tls:
    - secretName: tls-todo.ftsell.de
      hosts:
        - todo.ftsell.de
  rules:
    - host: todo.ftsell.de
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: vikunja-api
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vikunja-frontend
                port:
                  name: http
